--- a/src/main/resources/fxml/add_team.fxml
+++ b/src/main/resources/fxml/add_team.fxml
@@ -39,7 +39,7 @@
                           </font>
                       </Label>
                       <TextField fx:id="txtManagerName" layoutX="30.0" layoutY="230.0" prefWidth="300.0" />
-                      <Button fx:id="btnSave" layoutX="99.0" layoutY="416.0" mnemonicParsing="false" onAction="#btnCreateOnClick" prefHeight="26.0" prefWidth="300.0" style="-fx-background-color: #2196f3;" text="Agregar">
+                      <Button fx:id="btnSave" layoutX="99.0" layoutY="416.0" mnemonicParsing="false" onAction="#btnCreateOnClick" prefHeight="26.0" prefWidth="300.0" style="-fx-background-color: #2196f3;" text="Guardar">
                           <font>
                               <Font name="Arial Bold" size="18.0" />
                           </font>
@@ -71,6 +71,8 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
+                  <Label layoutX="409.0" layoutY="32.0" text="ID:" />
+                  <Label fx:id="lblIdTeam" layoutX="431.0" layoutY="32.0" />
                   </children>
               </AnchorPane>
          </center>
