--- a/src/main/resources/fxml/match_overview.fxml
+++ b/src/main/resources/fxml/match_overview.fxml
@@ -83,6 +83,17 @@
                <FlowPane.margin>
                   <Insets left="25.0" />
                </FlowPane.margin></Button>
+            <Button fx:id="btnManageSuspensions" alignment="CENTER" graphicTextGap="0.0" layoutX="10.0" layoutY="89.0" minHeight="32.0" minWidth="85.0" mnemonicParsing="false" onAction="#btnManageSuspensionsOnClick" prefHeight="60.0" prefWidth="85.0" style="-fx-background-color: #0A2463;" text="FINALIZAR PARTIDO" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <effect>
+                  <InnerShadow />
+               </effect>
+               <FlowPane.margin>
+                  <Insets top="40.0" />
+               </FlowPane.margin>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets left="5.0" right="10.0" />
