--- a/src/main/resources/fxml/suspension_overview.fxml
+++ b/src/main/resources/fxml/suspension_overview.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -40,6 +41,29 @@
                   </ImageView>
                </graphic>
             </Label>
+            <Label alignment="CENTER" prefHeight="30.0" text="Elegir Partido" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/ligas.png" />
+                     </image>
+                     <effect>
+                        <InnerShadow color="WHITE" />
+                     </effect>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="180.0" right="10.0" />
+               </padding>
+            </Label>
+            <ComboBox fx:id="cboMatches" minHeight="32.0" minWidth="200.0" prefHeight="30.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </ComboBox>
          </children>
       </HBox>
    </top>
@@ -48,14 +72,14 @@
          <children>
             <AnchorPane prefHeight="150.0" prefWidth="200.0">
                <children>
-                  <HBox layoutY="32.0" prefHeight="60.0" prefWidth="1100.0">
+                  <HBox layoutY="32.0" prefHeight="60.0">
                      <children>
-                        <Label prefHeight="26.0" text="Código de acceso" textFill="WHITE">
+                        <Label prefHeight="26.0" text="Código de acceso:" textFill="WHITE">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="System Bold" size="17.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="25.0" />
                            </HBox.margin>
                         </Label>
                         <Label fx:id="lblAccessCode" prefHeight="26.0" text="label" textFill="WHITE">
@@ -63,15 +87,15 @@
                               <Font size="15.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="10.0" right="5.0" />
+                              <Insets left="5.0" right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <Label prefHeight="26.0" text="Jornada " textFill="WHITE">
+                        <Label prefHeight="26.0" text="Jornada: " textFill="WHITE">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="System Bold" size="17.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="25.0" />
                            </HBox.margin>
                         </Label>
                         <Label fx:id="lblMeeting" layoutX="303.0" layoutY="10.0" prefHeight="26.0" text="label" textFill="WHITE">
@@ -79,15 +103,15 @@
                               <Font size="15.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="10.0" right="5.0" />
+                              <Insets left="5.0" right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <Label prefHeight="26.0" text="Fecha de Partido" textFill="WHITE">
+                        <Label prefHeight="26.0" text="Fecha de Partido:" textFill="WHITE">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="System Bold" size="17.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="25.0" />
                            </HBox.margin>
                         </Label>
                         <Label fx:id="lblDate" layoutX="160.0" layoutY="10.0" prefHeight="26.0" text="label" textFill="WHITE">
@@ -95,15 +119,15 @@
                               <Font size="15.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="10.0" right="5.0" />
+                              <Insets left="5.0" right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <Label prefHeight="26.0" text="Hora" textFill="WHITE">
+                        <Label prefHeight="26.0" text="Hora:" textFill="WHITE">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="System Bold" size="17.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="25.0" />
                            </HBox.margin>
                         </Label>
                         <Label fx:id="lblTime" layoutX="392.0" layoutY="10.0" prefHeight="26.0" text="label" textFill="WHITE">
@@ -111,15 +135,15 @@
                               <Font size="15.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="10.0" right="5.0" />
+                              <Insets left="5.0" right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <Label prefHeight="26.0" text="Estado" textFill="WHITE">
+                        <Label prefHeight="26.0" text="Estado:" textFill="WHITE">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="System Bold" size="17.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="25.0" />
                            </HBox.margin>
                         </Label>
                         <Label fx:id="lblState" layoutX="457.0" layoutY="10.0" prefHeight="26.0" text="label" textFill="WHITE">
@@ -127,18 +151,9 @@
                               <Font size="15.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="10.0" right="5.0" />
+                              <Insets left="5.0" right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <Label prefHeight="26.0" text="Refrescar tablas" textFill="WHITE">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="200.0" right="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Button fx:id="btnRefresh" mnemonicParsing="false" style="-fx-graphic: url(https://icons.iconarchive.com/icons/custom-icon-design/mono-general-4/24/refresh-icon.png); -fx-background-color: #D5E3E3;" textAlignment="CENTER" />
                      </children>
                      <padding>
                         <Insets top="5.0" />
@@ -152,13 +167,19 @@
                         <Insets left="20.0" top="5.0" />
                      </padding>
                   </Label>
+                  <Label layoutX="900.0" layoutY="5.0" prefHeight="26.0" text="Refrescar tablas" textFill="WHITE">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="btnRefresh" layoutX="1010.0" layoutY="2.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" style="-fx-graphic: url(https://icons.iconarchive.com/icons/custom-icon-design/mono-general-4/24/refresh-icon.png); -fx-background-color: #D5E3E3;" textAlignment="CENTER" />
                </children>
             </AnchorPane>
             <HBox prefHeight="500.0" prefWidth="200.0">
                <children>
-                  <VBox prefHeight="200.0" prefWidth="600.0">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="600.0">
                      <children>
-                        <Label text="Equipo: " textFill="WHITE">
+                        <Label fx:id="lblTeam1" text="Equipo: " textFill="WHITE">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -181,11 +202,22 @@
                               <Insets left="30.0" right="10.0" top="10.0" />
                            </VBox.margin>
                         </TableView>
+                            <Button fx:id="btnSuspendPlayer1" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" minHeight="32.0" minWidth="85.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="267.0" onAction="#btnSuspendPlayer1OnClick" style="-fx-background-color: #0A2463;" text="SUSPENDER JUGADOR" textAlignment="CENTER" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                           <effect>
+                              <InnerShadow height="15.0" radius="7.0" width="15.0" />
+                           </effect>
+                           <VBox.margin>
+                              <Insets top="15.0" />
+                           </VBox.margin>
+                        </Button>
                      </children>
                   </VBox>
-                  <VBox prefHeight="200.0" prefWidth="600.0">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="600.0">
                      <children>
-                        <Label text="Equipo: " textFill="WHITE">
+                        <Label fx:id="lblTeam2" text="Equipo: " textFill="WHITE">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -208,20 +240,23 @@
                               <Insets left="10.0" right="30.0" top="10.0" />
                            </VBox.margin>
                         </TableView>
+                        <Button fx:id="btnSuspendPlayer2" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" minHeight="32.0" minWidth="85.0" mnemonicParsing="false" onAction="#btnSuspendPlayer2OnClick" prefHeight="40.0" prefWidth="267.0" style="-fx-background-color: #0A2463;" text="SUSPENDER JUGADOR" textAlignment="CENTER" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                           <effect>
+                              <InnerShadow height="15.0" radius="7.0" width="15.0" />
+                           </effect>
+                           <VBox.margin>
+                              <Insets top="15.0" />
+                           </VBox.margin>
+                        </Button>
                      </children>
                   </VBox>
                </children>
             </HBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                      <Button fx:id="btnSuspendPlayer" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" minHeight="32.0" minWidth="85.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="267.0" style="-fx-background-color: #0A2463;" text="SUSPENDER JUGADOR" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font>
-                     <effect>
-                        <InnerShadow height="15.0" radius="7.0" width="15.0" />
-                     </effect>
-                  </Button>
                       <Button fx:id="btnEndMatch" alignment="CENTER" graphicTextGap="0.0" minHeight="32.0" minWidth="85.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: #0A2463;" text="FINALIZAR PARTIDO" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="20.0" />
